fix : overflow scroll apply

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -5,7 +5,6 @@
 
 .content {
     width: 375px;
-    height: 100vh;
     background: #ebebeb;
 
     &-wrap {
@@ -30,6 +29,7 @@
 
 .input-wrap {
     display: flex;
+    justify-content: flex-end;
 }
 
 .input {
@@ -69,8 +69,10 @@
 
 .item-wapper {
     display: flex;
+    height: calc(100vh - 203px);
+    overflow: scroll;
     flex-direction: column;
-    padding: 0 22px;
+    padding: 0 33px 22px;
     gap: 12px 0;
     margin-top: 39px;
 }
